test/valid/fc66494_prime_num/prime_num.mag
-- Author: 66494, Tiago Silva

const n : Int = 7

fun isPrime(num, iter) : (Int, Int) -> Bool =
    if num < 2 then false else
        if num == 2 || iter == 1 then true else
            if num % iter == 0 then false else
                isPrime(num, iter-1)

fun main (_) : Unit -> Unit =
    print(isPrime(n, n/2))