test/invalid-semantics/fc66494_same_func_diff_params/same_func_diff_params.mag
-- Author: 66494, Tiago Silva

fun onomatopeia(_) : Unit -> String =
    "crii crii crii"

fun onomatopeia(isDog) : Bool -> String =
    if isDog == true then "WOOF!" else "meow..."

fun main (_) : Unit -> Unit =
    print(onomatopeia(unit));
    print(onomatopeia(true))